# djangoProject27

./: .gitignore  manage.py  pyproject.toml  pytest.ini
DP27/: admin.py  apps.py  models.py  models_V1.py  permissions.py  serializers.py  serializers_V1.py  serializers_V2.py  serializers_V3.py  urls.py  views.py  views_V1.py  views_V2.py  views_V3.py  views_V4.py  views_V6.py  views_V7.py  views_fun.py
DP27/migrations/: 0001_initial.py  0002_vacancy_user.py  0003_skill_vacancy_skills.py  0004_alter_skill_options_alter_vacancy_options.py  0005_skill_is_active.py  0006_alter_vacancy_options_vacancy_likes.py
DjangoProject27/: asgi.py  settings.py  settings_V1.py  settings_V2.py  urls.py  wsgi.py
authentication/: Serializers.py  models_V1.py  models_V2.py  models_V3.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
companies/: models.py  urls.py  views.py
companies/migrations/: 0001_initial.py  0002_alter_company_options.py
